[package]
name    = "uu_chcpu"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/chcpu.rs"

[[bin]]
name = "chcpu"
path = "src/main.rs"

[dependencies]
clap            = { workspace = true }
libc            = { workspace = true }
rangemap        = { workspace = true }
syscall-numbers = { workspace = true }
thiserror       = { workspace = true }
uucore          = { workspace = true }
