[package]
name = "uu_dmesg"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/dmesg.rs"

[[bin]]
name = "dmesg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = "0.4.38"
parse_datetime = "0.8.0"

[features]
fixed-boot-time = []
