[package]
name = "uu_dmesg"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/dmesg.rs"

[[bin]]
name = "dmesg"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { workspace = true }
parse_datetime = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uucore = { workspace = true }

[features]
fixed-boot-time = []
