[package]
name = "uu_fsfreeze"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/fsfreeze.rs"

[[bin]]
name = "fsfreeze"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
linux-raw-sys = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
uucore = { workspace = true }
