[package]
name = "uu_lscpu"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lscpu.rs"

[[bin]]
name = "lscpu"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
sysinfo = { workspace = true }
uucore = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parse-size = { workspace = true }
