[package]
name    = "uu_lslocks"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/lslocks.rs"

[[bin]]
name = "lslocks"
path = "src/main.rs"

[dependencies]
uucore        = { workspace = true }
clap          = { workspace = true }
libc          = { workspace = true }
smartcols-sys = { workspace = true }
libmount-sys  = { workspace = true }
