[package]
name = "uu_renice"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true }
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/renice.rs"

[[bin]]
name = "renice"
path = "src/main.rs"
