[package]
name = "uu_rev"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/rev.rs"

[[bin]]
name = "rev"
path = "src/main.rs"
