[package]
name = "uu_wall"
version = "0.0.1"
edition = "2021"
description = "wall ~ Write a mesage to all users."

[lib]
path = "src/wall.rs"

[[bin]]
name = "wall"
path = "src/main.rs"

[dependencies]
uucore = { workspace = true, features = ["process", "entries"] }
clap = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
unicode-width = { workspace = true }
